# odysseus

./: .env.example  CONTRIBUTING.md  Dockerfile  README.md  add_imports.py  analyze_ast.py  app.py  css_links.html  docker-compose.gpu-amd.yml  docker-compose.gpu-nvidia.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  split.py  split_css.py  update_index.py
core/: auth_middleware.py  database.py  lifespan.py  platform_compat.py  static_serving.py  timeout_middleware.py  token_cache.py
docs/: stage1-oracle-ui.md
frontend/: package-lock.json  package.json  vite.config.ts
routes/: archive_routes.py  brain_routes.py  chat_helpers.py  chat_routes.py  chatgpt_subscription_routes.py  cookbook_helpers.py  cookbook_routes.py  copilot_routes.py  email_routes.py  finance_routes.py  gym_log_routes.py  memory_routes.py  model_routes.py  oracle_routes.py  prefs_routes.py  reading_list_routes.py  shell_routes.py  system_routes.py
scratch/: extract_helpers.py  split_tools.py
services/: archive_service.py  finance_statement_analyzer.py  gym_log.py  oracle_service.py  reading_list.py  vanta_brain.py
src/: action_intents.py  agent_loop.py  app_initializer.py  archive_prompt.py  bg_jobs.py  bg_monitor.py  builtin_actions.py  caldav_sync.py  caldav_writeback.py  chat_handler.py  chat_helpers.py  chat_processor.py  chatgpt_subscription.py  context_budget.py  context_compactor.py  deep_research.py  document_actions.py  document_processor.py  email_thread_parser.py  endpoint_resolver.py  event_bus.py  llm_core.py  mcp_manager.py  mcp_oauth.py  model_context.py  model_discovery.py  personal_docs.py  preset_manager.py  prompt_security.py  research_handler.py  research_utils.py  service_health.py  task_scheduler.py  tool_execution.py  tool_implementations.py  tool_index.py  tool_parsing.py  tool_policy.py  tool_schemas.py  tool_security.py  (+5 more)
static/: app.js  branding.js  index.html  login.html  manifest.json  strnos-oracle.html  style.css
tests/: test_action_intents.py  test_archive.py  test_archive_static.py  test_brain_health_static.py  test_chat_note_actions.py  (+21 more)
(+170 files in other folders)
