[project]
name = "odysseus"
version = "2.0.0"
description = "Self-hosted AI workspace"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
keywords = ["ai", "llm", "self-hosted", "workspace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Test-taxonomy markers added at collection time by tests/conftest.py. The
# stable area_* markers are declared here; the dynamic sub_<filename-token>
# markers are registered before collection by pytest_configure in
# tests/conftest.py, so unknown-mark warnings still flag genuine typos outside
# the taxonomy. See tests/_taxonomy.py and tests/README.md.
markers = [
    "area_security: tests covering auth, owner-scope, SSRF, XSS, confinement, redaction",
    "area_routes: tests covering HTTP route / API behavior",
    "area_services: tests covering service-layer behavior (llm, cookbook, email, calendar, ...)",
    "area_cli: tests covering CLI / script behavior",
    "area_js: JavaScript / Node-backed tests",
    "area_helpers: self-tests for the shared test helpers in tests/helpers/",
    "area_unit: pure parser / utility tests that do not clearly belong elsewhere",
    "area_uncategorized: tests not yet matched by the taxonomy (fallback)",
    # Fast-lane marker (issue #3443). Opt-in and orthogonal to the area_*/sub_*
    # taxonomy. The fast lane runs `not slow`; mark a test slow only with
    # duration evidence (see tests/run_focus.py --durations and tests/README.md).
    "slow: opt-in marker for known-slow tests; excluded by the fast lane (not slow)",
]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "core.*"
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "UP007", "UP006"]

[tool.ruff.lint.isort]
known-first-party = ["core", "src", "routes", "services"]
